fixed collapsable navbar

--- a/assets/linker/css/main.css
+++ b/assets/linker/css/main.css
@@ -190,3 +190,10 @@ color: black;
 span#county_legend {
 font-size: 11px;
 }
+
+button.navbar-toggle:after{
+font-family:FontAwesome;
+content: "\f039";
+font-size:'4em';  
+}
+
